--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,9 +60,9 @@ if (DEFINED ENV{FASTRTPSHOME})
 endif ()
 
 find_package(Boost REQUIRED)
-find_package(fastcdr REQUIRED)
-find_package(fastrtps REQUIRED)
-find_package(amm_std REQUIRED)
+#find_package(fastcdr REQUIRED)
+#find_package(fastrtps REQUIRED)
+#find_package(amm_std REQUIRED)
 
 include_directories(Source)
 include_directories(${Boost_INCLUDE_DIRS})
